fix the apache deprecated stuff
I may have done to mutch